--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ favicon:       "favicon.ico"
 url:           "https://anttbd.github.io" #"http://localhost"
 
 lastUpdate:
-    fr:        "juillet 2022"
-    en:        "July 2022"
+    fr:        "octobre 2022"
+    en:        "October 2022"
 
 # Build settings
 markdown:      kramdown
