--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ lastUpdate:
 # Build settings
 markdown:      kramdown
 #permalink:    /projet/:title
+
+plugins:
+  - jekyll-image-size # (1.2.1) https://github.com/generalui/jekyll-image-size
