--- a/.github/workflows/build-jekyll.yml
+++ b/.github/workflows/build-jekyll.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - Jekyll  # Here source code branch is `master`, it could be other branch
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents:                    read
+  pages:                       write
+  id-token:                    write
+
 jobs:
   build_and_deploy:
     runs-on:                   ubuntu-latest
