--- a/_data/diplomas.yml
+++ b/_data/diplomas.yml
@@ -58,8 +58,8 @@
     fr:          Chicoutimi, Québec, Canada
     en:          Chicoutimi, Québec, Canada
   date:
-    fr:          Depuis sept 2021
-    en:          From Sept 2021
+    fr:          Sept 2021 - Jan 2023
+    en:          Sept 2021 - Jan 2023
   sub_title:
     fr:          Maîtrise en informatique<br>Jeux Vidéo
     en:          Master's degrees in Computer Science<br>Video Games
@@ -71,7 +71,7 @@
     src:         UQAC_1.png
     alt:         UQAC
   progress_bar:
-    val:         2
+    val:         3
     max:         3
     class:       primary # primary or success
 
@@ -84,8 +84,8 @@
     fr:          Limoges, France
     en:          Limoges, France
   date:
-    fr:          Depuis sept 2017
-    en:          From Sept 2017
+    fr:          Sept 2017 - Juin 2023
+    en:          Sept 2017 - June 2023
   sub_title:
     fr:          École préparatoire<br>Cycle ingénieur
     en:          Preparatory school<br>Engineering cycle
@@ -97,7 +97,7 @@
     src:         3iL bis.png
     alt:         3iL Ingénieurs
   progress_bar:
-    val:         4.5
+    val:         5
     max:         5
     class:       primary # primary or success
 
