--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -389,7 +389,7 @@
       icon:    <i class="fas fa-award"></i>
       title:
         fr:    Présélections régionales
-        en:    Regional screening
+        en:    Regional pre-selection
   website:
     lien:      "https://www.olympiadesmetiers.fr/"
     txt:
