Deploy React app to GitHub Pages

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     },
     {
       "src": "assets/img/logo/logo site2.svg",
-      "type": "image/png",
+      "type": "image/svg",
       "sizes": "192x192"
     },
     {
